1，整理logger包 2，整理networkchangedobserver 3，重写application的oncreate方法 4，改为配置形式配置软件的功能

--- a/res/layout/activity_demomain.xml
+++ b/res/layout/activity_demomain.xml
@@ -44,6 +44,12 @@
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:text="@string/test_download" />
+	    
+	    <Button
+	        android:id="@+id/btn_test_exception"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:text="@string/test_exception" />
 	
 	    <Button
 	        android:id="@+id/btn_exit_app"
